tests/paczka1/fuzzy1/55790195.err
Error in line 3: usFg3MeG S519 82,0
Error in line 4: uBtX0xA7x A272 78,3
Error in line 25: P8MDEAe S519 10,9
Error in line 39: usFg3MeG A966 -3,2
Error in line 35: 4LCffh A554 75,5
